--- a/javascript/index.html
+++ b/javascript/index.html
@@ -54,7 +54,7 @@
             font-size: 8vw;
             text-transform: uppercase;
         }
-        #contents p{
+        #contents p a{
             font-family: 'NEXON Lv1 Gothic OTF';
             background: #0e43f1;
             color: #fff;
@@ -63,6 +63,12 @@
             border-radius: 50px;
             font-size: 16px;
             margin-bottom: 2%;
+            border-color: 1px solid #fff;
+        }
+        #contents p a:hover{
+            border-color: 1px solid #0e43f1;
+            background:#fff;
+            color: #0e43f1;
         }
         .menu li{
             display: inline;
@@ -451,8 +457,11 @@
                     </defs>
                 </svg>
             </div>
-            <h1>Javascript</h1>
-            <p>자바스크립트 레퍼런스 북입니다.</p>
+            <h1>자바스크립트</h1>
+            <p>
+                <a href="index.html">자바스크립트 레퍼런스 북</a>
+                <a href="index2.html">제이쿼리 레퍼런스 북</a>
+            </p>
             <nav class="menu">
                 <ul>
                     <li><a href="javascriptRefer01.html">데이터 저장하기</a></li>
