--- a/javascript/javascriptRefer02.html
+++ b/javascript/javascriptRefer02.html
@@ -32,6 +32,7 @@
         body {
             padding: 5%;
             margin-bottom: 400px;
+            line-height: 1.6;
         }
         h1 {
             padding: 20px 0;
@@ -53,6 +54,9 @@
         }
         ul {
             list-style: none;
+        }
+        ol{
+            padding-left: 26px;
         }
         a {
             text-decoration: none;
@@ -194,6 +198,13 @@
             border-style: solid;
         }
         @media (max-width: 800px){
+            body{
+                padding: 5%;
+                font-size: 13px;
+            }
+            h1{
+                text-align: center;
+            }
             .menu li a {
                 font-size: 12px;
                 padding: 5px 20px;
@@ -1176,7 +1187,6 @@
             document.write(name2, "<br>");
             document.write(name3, "<br><br>");
         }
-
         // 7월 26일 숙제
         // 배열 데이터의 합을 출력하세요!!
         // {
