--- a/site/cardType.html
+++ b/site/cardType.html
@@ -88,6 +88,7 @@
                             <div class="card-desc">웹접근성 지첨서를 준수하여 만들 사이트입니다. 기본기를 다지기 위한...</div>
                             <div class="card-keyword">
                                 <span>SITE</span>
+                                <span>CODING</span>
                             </div>
                         </a>
                     </div>      
