--- a/site/cardType.html
+++ b/site/cardType.html
@@ -16,6 +16,7 @@
 
     <!-- Card Type CSS -->
     <link rel="stylesheet" href="CSS/cardType.css">
+    <link rel="stylesheet" href="css/imageType.css">
 </head>
 <body>
 
@@ -188,6 +189,8 @@
             </div>
         </div>
     </section>
+
+  
 
 </body>
 </html>
