--- a/site/imageType.html
+++ b/site/imageType.html
@@ -25,8 +25,8 @@
                 <div class="img-wrap">
                     <div class="img-card">
                         <a href="">
-                        <div class="box"><img src="img/img01.jpg" alt="DC코믹스 이미지입니다.">
-                            <div class="img-word1">
+                       <img src="img/img01.jpg" alt="DC코믹스 이미지입니다.">
+                            <div class="img-word">
                                 <strong class="img-title">DC코믹스</strong>
                                 <span class="img-desc">DC코믹스는 마블코믹스와 라이벌 관계이며, 
                                     배트멘, 아큐아맨, 원더우먼과 같은 슈퍼히어로가 나오는 코믹스를 출간했다.</span>
@@ -34,13 +34,12 @@
                                     <span>자세히 보기</span>
                                 </span>
                             </div>
-                        </div>
                         </a>
                     </div> 
                     <div class="img-card">
                         <a href="">
-                        <div class="box"><img src="img/img02.jpg" alt="마블코믹스 이미지입니다.">
-                            <div class="img-word2">
+                       <img src="img/img02.jpg" alt="마블코믹스 이미지입니다.">
+                            <div class="img-word">
                                 <strong class="img-title">마블코믹스</strong>
                                 <span class="img-desc">마블코믹스는 DC코믹스와 라이벌 관계이며, 
                                     아이언맨, 캡틴아메리카, 스파이더맨과 같은 슈퍼히어로가 나오는 코믹스를 출간했다.</span>
@@ -48,7 +47,7 @@
                                     <span>자세히 보기</span>
                                 </span>
                             </div>
-                        </div>
+                   
                         </a>
                     </div> 
                 </div>  
