--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
                     <!-- box -->
                     <section class="color-shape script">
-                        <a href="../dothome/refer-jquery/index2.html" target="_blank">
+                        <a href="refer-jquery/index2.html" target="_blank">
                             <div class="image-wrap">
                                 <div class="hover-wrap">
                                     <span class="overlay-img-donut">JQUERY</span>
