--- a/refer-css/index2.html
+++ b/refer-css/index2.html
@@ -967,81 +967,27 @@
                         <th>이름</th>
                     </tr>
                     <tr>
-                        <td>:first-child</td>
-                        <td>li:first-line {color:#fff;}</td>
+                        <td>:link</td>
+                        <td>a:link {color:#fff;}</td>
                         <td>li 자식 요소 중 첫 번째 자식 요소에게 컬러를 하얀색으로 변경합니다.
                         </td>
                     </tr>
                     <tr>
-                        <td>:last-child</td>
-                        <td>li:last-line {color:#fff;}</td>
-                        <td>li 자식 요소 중 마지막 번째 자식 요소에게 컬러를 하얀색으로 변경합니다.
+                        <td>:visited</td>
+                        <td>a:visited {color:#fff;}	</td>
+                        <td>방문한 링크의 글씨 색을 하얀색으로 설정합니다.
                         </td>
                     </tr>
                     <tr>
-                        <td>:first-of-type</td>
-                        <td>p:first-of-type {color:#fff;}</td>
-                        <td>자식 요소 중 p 태그 첫 번째 자식 요소에게 컬러를 하얀색으로 변경합니다.
+                        <td>:hover</td>
+                        <td>a:hover {color:#fff;}</td>
+                        <td>링크 위에 마우스를 올려 놓았을 경우 글씨 색을 하얀색으로 설정합니다.
                         </td>
                     </tr>
                     <tr>
-                        <td>:last-of-type</td>
-                        <td>p:last-of-type {color:#fff;}</td>
-                        <td>자식 요소 중 p 태그 마지막 번째 자식 요소에게 컬러를 하얀색으로 변경합니다.
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>:nth-child()</td>
-                        <td>li:nth-child(2) {color:#fff;}</td>
-                        <td>li 자식 요소 중 2번째 자식 요소에게 컬러를 하얀색으로 변경합니다.
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>:nth-last-child()</td>
-                        <td>li:nth-last-child(2) {color:#fff;}</td>
-                        <td>li 자식 요소 중 뒤에서 2번째 자식 요소에게 컬러를 하얀색으로 변경합니다.
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>:nth-of-type()</td>
-                        <td>p:nth-of-type(2) {color:#fff;}</td>
-                        <td>자식 요소 중 p 태그 2번째 자식 요소에게 컬러를 하얀색으로 변경합니다.
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>:nth-last-of-type()</td>
-                        <td>p:nth-last-of-type(2) {color:#fff;}</td>
-                        <td>자식 요소 중 p 태그 뒤에서 2번째 자식 요소에게 컬러를 하얀색으로 변경합니다.
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>:only-child</td>
-                        <td>:only-child {color:#fff;}</td>
-                        <td>자식 요소 중 유일한 태그 자식 요소에게 컬러를 하얀색으로 변경합니다.
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>:only-of-type</td>
-                        <td>p:only-of-type {color:#fff;}</td>
-                        <td>자식 요소 중 유일한 p 태그 자식 요소에게 컬러를 하얀색으로 변경합니다.	
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>:not()</td>
-                        <td>li:not(:nth-child(2)) {color:#fff;}</td>
-                        <td>li 자식 요소 중 2번째 자식 요소를 제외하고 컬러를 하얀색으로 변경합니다.
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>:root</td>
-                        <td>:root {color:#fff;}</td>
-                        <td>기본 루트 요소의 컬러를 하얀색으로 변경합니다.
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>:empty</td>
-                        <td>:empty {color:#fff;}</td>
-                        <td>컨텐츠 요소가 없는 요소의 컬러를 하얀색으로 변경합니다.
+                        <td>:active</td>
+                        <td>a:active {color:#fff;}</td>
+                        <td>링크가 활성화되었을 경우 글씨 색을 하얀색으로 변경합니다.
                         </td>
                     </tr>
                 </thead>
@@ -1064,81 +1010,27 @@
                         <th>이름</th>
                     </tr>
                     <tr>
-                        <td>:first-child</td>
-                        <td>li:first-line {color:#fff;}</td>
-                        <td>li 자식 요소 중 첫 번째 자식 요소에게 컬러를 하얀색으로 변경합니다.
+                        <td>:checked</td>
+                        <td>input:checked {color:#fff;}</td>
+                        <td>input 태그가 체크되었을 때 글씨 색을 하얀색으로 변경합니다.
                         </td>
                     </tr>
                     <tr>
-                        <td>:last-child</td>
-                        <td>li:last-line {color:#fff;}</td>
-                        <td>li 자식 요소 중 마지막 번째 자식 요소에게 컬러를 하얀색으로 변경합니다.
+                        <td>:focus</td>
+                        <td>input:link {color:#fff;}</td>
+                        <td>input 태그에 초점이 맞추어졌을 때 글씨 색을 하얀색으로 변경합니다.
                         </td>
                     </tr>
                     <tr>
-                        <td>:first-of-type</td>
-                        <td>p:first-of-type {color:#fff;}</td>
-                        <td>자식 요소 중 p 태그 첫 번째 자식 요소에게 컬러를 하얀색으로 변경합니다.
+                        <td>:enabled</td>
+                        <td>input:enabled {color:#fff;}</td>
+                        <td>input 태그가 사용 가능하면 글씨 색을 하얀색으로 변경합니다.
                         </td>
                     </tr>
                     <tr>
-                        <td>:last-of-type</td>
-                        <td>p:last-of-type {color:#fff;}</td>
-                        <td>자식 요소 중 p 태그 마지막 번째 자식 요소에게 컬러를 하얀색으로 변경합니다.
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>:nth-child()</td>
-                        <td>li:nth-child(2) {color:#fff;}</td>
-                        <td>li 자식 요소 중 2번째 자식 요소에게 컬러를 하얀색으로 변경합니다.
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>:nth-last-child()</td>
-                        <td>li:nth-last-child(2) {color:#fff;}</td>
-                        <td>li 자식 요소 중 뒤에서 2번째 자식 요소에게 컬러를 하얀색으로 변경합니다.
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>:nth-of-type()</td>
-                        <td>p:nth-of-type(2) {color:#fff;}</td>
-                        <td>자식 요소 중 p 태그 2번째 자식 요소에게 컬러를 하얀색으로 변경합니다.
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>:nth-last-of-type()</td>
-                        <td>p:nth-last-of-type(2) {color:#fff;}</td>
-                        <td>자식 요소 중 p 태그 뒤에서 2번째 자식 요소에게 컬러를 하얀색으로 변경합니다.
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>:only-child</td>
-                        <td>:only-child {color:#fff;}</td>
-                        <td>자식 요소 중 유일한 태그 자식 요소에게 컬러를 하얀색으로 변경합니다.
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>:only-of-type</td>
-                        <td>p:only-of-type {color:#fff;}</td>
-                        <td>자식 요소 중 유일한 p 태그 자식 요소에게 컬러를 하얀색으로 변경합니다.	
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>:not()</td>
-                        <td>li:not(:nth-child(2)) {color:#fff;}</td>
-                        <td>li 자식 요소 중 2번째 자식 요소를 제외하고 컬러를 하얀색으로 변경합니다.
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>:root</td>
-                        <td>:root {color:#fff;}</td>
-                        <td>기본 루트 요소의 컬러를 하얀색으로 변경합니다.
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>:empty</td>
-                        <td>:empty {color:#fff;}</td>
-                        <td>컨텐츠 요소가 없는 요소의 컬러를 하얀색으로 변경합니다.
+                        <td>:disabled</td>
+                        <td>input:disabled {color:#fff;}</td>
+                        <td>input 태그가 사용 가능하지 않으면 글씨 색을 하얀색으로 변경합니다.
                         </td>
                     </tr>
                 </thead>
