--- a/refer-css/index.html
+++ b/refer-css/index.html
@@ -195,6 +195,7 @@
         <section class="refer">
             <h3 class="active"><a href="../refer-css/index.html">Alphabet</a></h3>
             <h3><a href="../refer-css/index2.html">Topics</a></h3>
+            <h3><a href="../refer-css/transform.html">Transform</a></h3>
            
             <table>
                 <colgroup>
@@ -946,11 +947,11 @@
                     </tr>
                     <tr>
                         <td>transition-delay</td>
-                        <td>transition-delay 속성은 요소의 움직임 시간을 지연합니다.</td>
+                        <td>transition-delay 속성은 요소의 움직임 시간을 지연 시간을 설정합니다.</td>
                     </tr>
                     <tr>
                         <td>transition-duration</td>
-                        <td></td>
+                        <td>transition-duration 속성은 요소의 움직임을 지속 시간을 설정합니다.</td>
                     </tr>
                     <tr>
                         <td>transition-property</td>
