--- a/site/imageType.html
+++ b/site/imageType.html
@@ -93,5 +93,50 @@
             </div>
         </div>
     </section>
+<!-- imgType03 -->
+<section class="imgType">
+    <div class="container">
+      <div class="imgType03">
+        <h2>행복은 어디에나 있대요</h2>
+        <div class="wrap">
+          <div class="img">
+            <a href="#">
+              <img src="img/img06.jpg" alt="이미지6">
+              <div class="contents">
+                <strong class="title">행복한 순간 함께한 우리</strong>
+                <p class="desc">모두의 옆에 있는 행복을 찾아가는 시간, 다양한 행복을 함계 나누어요.</p>
+              </div>
+            </a>
+          </div>
+          <div class="img">
+              <img src="img/img07.jpg" alt="이미지7">
+              <div class="box">
+                <strong class="title">기쁨</strong>
+              </div>
+          </div>
+          <div class="img">
+              <img src="img/img08.jpg" alt="이미지8">
+              <div class="box">
+                <strong class="title">가족</strong>
+              </div>
+          </div>
+          <div class="img">
+              <img src="img/img09.jpg" alt="이미지9">
+              <div class="box">
+                <strong class="title">웃긴 사진</strong>
+              </div>
+          </div>
+          <div class="img">
+              <img src="img/img10.jpg" alt="이미지10">
+              <div class="box">
+                <strong class="title">스마일</strong>
+              </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- //imgType03 -->
+    </section>
 </body>
 </html>
