--- a/site/main.html
+++ b/site/main.html
@@ -28,8 +28,8 @@
                 </h1>
                 <nav class="menu">
                     <ul>
-                        <li><a href="#">메뉴아이템</a></li>
-                        <li><a href="#">메뉴아이템</a></li>
+                        <li><a href="../site/cardType.html">cardType</a></li>
+                        <li><a href="../site/imageType.html">imageType</a></li>
                         <li><a href="#">메뉴아이템</a></li>
                         <li><a href="#">메뉴아이템</a></li>
                         <li><a href="#">메뉴아이템</a></li>
