--- a/site/index.html
+++ b/site/index.html
@@ -1,5 +1,5 @@
 <html lang="ko">
-
+    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -71,7 +71,7 @@
     </header>
     <div class="bs-header bgs1" id="content">
         <div class="container">
-            <h1>Wire frame Reference v1.0 &lt;/doc&gt;</h1>
+            <h1>Layout Reference v1.0 &lt;/doc&gt;</h1>
             <p><a href="https://jihyeh53.github.io/dothome21/" target="_blank">jihyeh53.github.io</a></p>
         </div>
     </div>
@@ -80,10 +80,18 @@
             <div class="col-md-9" role="main">
                 <!-- Intro1 -->
                 <div class="bs-docs-section">
-                    <h2 id="intro1" class="page-header">카드 유형1</h2>
-                    <p>코드 보기 <a href="cardType01.html">View</a></p>
+                    <h2 id="intro1" class="page-header">카드 유형</h2>
+                    <p>코드 보기 <a href="../site/cardType.html">View</a></p>
                 </div>
                 <!-- //Intro1 -->
+
+                <!-- Intro2 -->
+                <div class="bs-docs-section">
+                    <h2 id="intro2" class="page-header">이미지 유형</h2>
+                    <p>코드 보기 <a href="../site/imageType.html">View</a></p>
+                </div>
+                <!-- //Intro2 -->
+
 
             </div>
 
@@ -91,8 +99,8 @@
             <div class="col-md-3">
                 <div class="bs-sidebar hidden-print" role="complementary">
                     <ul class="nav bs-sidenav">
-                        <li><a href="#intro1">카드 유형1</a></li>
-                        
+                        <li><a href="#intro1">카드 유형</a></li>
+                        <li><a href="#intro2">이미지 유형</a></li>
                     </ul>
                 </div>
             </div>
