--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 
                     <!-- box -->
                     <section class="color-shape reference">
-                        <a href="../dothome/site/index.html" target="_blank">
+                        <a href="site/index.html" target="_blank">
                             <div class="image-wrap">
                                 <div class="hover-wrap">
                                     <span class="overlay-img-donut">Site</span>
