--- a/refer-html/index.html
+++ b/refer-html/index.html
@@ -191,6 +191,7 @@
             <li><a href="../refer-html/index.html">HTML</a></li>
             <li><a href="../refer-css/index.html">CSS</a></li>
             <li><a href="../javascript/index.html">JAVASCRIPT</a></li>
+            <li><a href="../refer-jquery/index.html">JQUERY</a></li>
         </ul>
         <section class="refer">
             <h3 class="active"><a href="../refer-html/index.html">Alphabet</a></h3>
@@ -209,14 +210,501 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>align-content</td>
-                        <td>align-content 속성은 콘텐츠 아이템의 상하관계 정렬 상태를 설정합니다.</td>
+                        <td>&lt;a&gt;</td>
+                        <td>&lt;a&gt; 태그는 다른 페이지 이동을 설정합니다.</td>
                     </tr>
                     <tr>
-                        <td>align-items</td>
-                        <td>align-items 속성은 콘텐츠 아이템의 내부 상하관계 정렬 상태를 설정합니다.</td>
+                        <td>&lt;abbr&gt;</td>
+                        <td></td>
                     </tr>
-        
+                    <tr>
+                        <td>&lt;acronym&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;address&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;applet&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;area&gt;</td>
+                        <td>&lt;area&gt; 태그는 이미지 맵의 영역을 정의합니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;article&gt;</td>
+                        <td>&lt;article&gt; 태그는 사이트의 독립적인 컨텐츠 섹션을 설정합니다. </td>
+                    </tr>
+                    <tr>
+                        <td>&lt;aside&gt;</td>
+                        <td>&lt;aside&gt; 태그는 주요 콘텐츠의 보조적 컨텐츠 섹션을 설정합니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;audio&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;b&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;base&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;basefont&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;bdi&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;bdo&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;big&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;blockquote&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;blink&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;body&gt;</td>
+                        <td>&lt;body&gt; 태그는 문서의 타이틀, 스크립트, 스타일, 메타 정보 등을 설정합니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;br&gt;</td>
+                        <td>&lt;br&gt; 태그는 텍스트 줄바꿈이 필요할 때 설정합니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;button&gt;</td>
+                        <td>&lt;button&gt; 태그는 클릭 할 수 있는 버튼을 설정합니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;canvas&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;caption&gt;</td>
+                        <td>&lt;caption&gt; 태그는 표의 제목을 설정합니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;center&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;cite&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;code&gt;</td>
+                        <td>&lt;code&gt; 태그는 코드를 나타내는 텍스트를 설정합니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;col&gt;</td>
+                        <td>&lt;col&gt; 태그는 &lt;colgroup&gt; 요소에 속하는 각 열의 속성을 설정합니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;colgroup&gt;</td>
+                        <td>&lt;colgroup&gt; 태그는 표의 열을 묶는 그룹을 설정합니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;data&gt;</td>
+                        <td>&lt;data&gt; 태그는 주어진 요소의 데이터 값을 설정합니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;datalist&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;dd&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;del&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;details&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;dfn&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;dialog&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;dir&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;div&gt;</td>
+                        <td>&lt;div&gt; 태그는 문서의 영역을 나누거나 그룹화 할 때 설정합니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;dl&gt;</td>
+                        <td>&lt;dl&gt; 태그는 설명 목록을 설정합니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;dt&gt;</td>
+                        <td>&lt;dt&gt; 태그는 설명 목록 항목의 제목을 설정합니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;em&gt;</td>
+                        <td>&lt;em&gt; 태그는 텍스트를 강조할 때 설정합니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;embed&gt;</td>
+                        <td>&lt;embed&gt; 태그는 외부 콘텐츠를 사용할 수 있도록 설정합니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;fieldset&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;figcaption&gt;</td>
+                        <td>&lt;figcaption&gt; 태그는 &lt;figure&gt; 요소의 설명 또는 제목을 설정합니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;figure&gt;</td>
+                        <td>&lt;figure&gt; 태그는 인용, 도표, 사진, 코드 등의 독립적인 콘텐츠를 설정합니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;font&gt;</td>
+                        <td>&lt;font&gt; 태그는 폰트의 크기, 색, 종류를 설정합니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;footer&gt;</td>
+                        <td>&lt;footer&gt; 태그는 사이트 관련 정보 및 관련 링크 콘텐츠 섹션을 설정합니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;form&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;frame&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;frameset&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;h1&gt;~&lt;h6&gt;</td>
+                        <td>&lt;h1&gt;~&lt;h6&gt; 태그는 섹션의 제목 설정합니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;head&gt;</td>
+                        <td>&lt;head&gt; 태그는 제목과 스크립트, 스타일 시트, 메타 정보 등을 제공합니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;header&gt;</td>
+                        <td>&lt;header&gt; 태그는 사이트의 소개 및 메뉴 그룹을 나타내는 섹션을 설정합니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;hgroup&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;hr&gt;</td>
+                        <td>&lt;hr&gt; 태그는 단란 요소간의 주제별 구분을 설정합니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;html&gt;</td>
+                        <td>&lt;html&gt; 태그는 웹 문서의 최상위 요소 문서의 루트를 나타냅니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;i&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;iframe&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;img&gt;</td>
+                        <td>&lt;img&gt; 태그는 웹 문서에 이미지를 정의합니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;input&gt;</td>
+                        <td>&lt;input&gt; 태그는 데이터를 입력할 수 있는 폼 컨트롤을 정의합니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;ins&gt;</td>
+                        <td>&lt;ins&gt; 태그는 문서에 삽입된 텍스트를 설정합니다</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;kbd&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;keygen&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;label&gt;</td>
+                        <td>&lt;label&gt; 태그는 해당 &lt;input&gt; 요소의 제목을 설정합니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;legend&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;li&gt;</td>
+                        <td>&lt;li&gt; 태그는 목록의 항목을 나타내는 태그입니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;link&gt;</td>
+                        <td>&lt;link&gt; 태그는 외부 파일 연결 할 때 설정합니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;main&gt;</td>
+                        <td>&lt;main&gt; 태그는 문서의 주요 콘텐츠를 정의합니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;map&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;mark&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;marquee&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;menu&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;menuitem&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;meta&gt;</td>
+                        <td>&lt;meta&gt; 태그는 웹 문서에 대한 정보를 제공합니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;meter&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;nav&gt;</td>
+                        <td>&lt;nav&gt; 태그는 내부 페이지 및 외부 페이지에 대한 탐색 링크를 제공하는 페이지 섹션을 설정합니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;noframes&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;noscript&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;object&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;ol&gt;</td>
+                        <td>&lt;ol&gt; 태그는 순서가 있는 목록형 태그입니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;optgroup&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;option&gt;</td>
+                        <td>&lt;option&gt; 태그는 &lt;select&gt; 요소의 항목을 정의합니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;output&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;p&gt;</td>
+                        <td>&lt;p&gt; 태그는 단락을 나타냅니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;param&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;picture&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;pre&gt;</td>
+                        <td>&lt;pre&gt; 태그는 마크업 소스를 화면 그대로 표현합니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;progress&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;q&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;rp&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;rt&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;rtc&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;ruby&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;s&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;samp&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;script&gt;</td>
+                        <td>&lt;script&gt; 태그는 실행 가능한 스크립트 코드를 포함하거나 외부 스크립트를 연결할 수 있습니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;section&gt;</td>
+                        <td>&lt;section&gt; 태그는 주제별 그룹의 콘텐츠 섹션을 나타낼 때 사용하며, 각 섹션에는 &lt;h1&gt;~&lt;h6&gt; 요소를 자식으로 포함시켜 식별해야 합니다. </td>
+                    </tr>
+                    <tr>
+                        <td>&lt;select&gt;</td>
+                        <td>&lt;select&gt; 태그는 선택 목록을 설정합니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;small&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;source&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;span&gt;</td>
+                        <td>&lt;span&gt; 태그는 콘텐츠 요소를 표현하기 위한 인라인 요소이며, 의미가 없는 그룹화 요소입니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;strike&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;strong&gt;</td>
+                        <td>&lt;strong&gt; 태그는 텍스트의 중요성을 강조할 때 설정합니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;style&gt;</td>
+                        <td>&lt;style&gt; 태그는 웹 문서에 스타일 정보를 설정할 수 있습니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;sub&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;summary&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;sup&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;svg&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;table&gt;</td>
+                        <td>&lt;table&gt; 태그는 표를 설정합니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;tbody&gt;</td>
+                        <td>&lt;tbody&gt; 태그는 표의 본문 영역을 그룹화합니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;td&gt;</td>
+                        <td>&lt;td&gt; 태그는 표의 열(셀)을 설정합니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;template&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;textarea&gt;</td>
+                        <td>&lt;textarea&gt; 태그는 여러줄의 텍스트를 편집할 수 있습니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;tfoot&gt;</td>
+                        <td>&lt;tfoot&gt; 태그는 표의 푸터 영역을 그룹화합니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;th&gt;</td>
+                        <td>&lt;th&gt; 태그는 행이나 열에 타이틀을 설정합니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;thead&gt;</td>
+                        <td>&lt;thead&gt; 태그는 표의 헤더 영역을 그룹화합니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;time&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;title&gt;</td>
+                        <td>&lt;title&gt; 태그는 브라우저의 제목 또는 탭에 표시되는 문서의 제목을 표시합니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;tr&gt;</td>
+                        <td>&lt;tr&gt; 태그는 표의 행을 설정합니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;track&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;tt&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;u&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;ul&gt;</td>
+                        <td>&lt;ul&gt; 태그는 일반적인 글 보다는 목록 형식의 글을 사용할 때 씁니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;var&gt;</td>
+                        <td>&lt;var&gt; 태그는 수학적인 변수나 프로그램의 변수를 쓸 때 사용합니다.</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;video&gt;</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>&lt;wbr&gt;</td>
+                        <td></td>
+                    </tr>
                 </tbody>
             </table>
         </section>
