--- a/refer-html/index2.html
+++ b/refer-html/index2.html
@@ -199,6 +199,7 @@
             <li><a href="../refer-html/index.html">HTML</a></li>
             <li><a href="../refer-css/index.html">CSS</a></li>
             <li><a href="../javascript/index.html">JAVASCRIPT</a></li>
+            <li><a href="../refer-jquery/index.html">JQUERY</a></li>
         </ul>
         <section class="refer">
             <h3><a href="../refer-html/index.html">Alphabet</a></h3>
@@ -225,8 +226,8 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>align-content</td>
-                        <td>align-content 속성은 콘텐츠 아이템의 상하관계 정렬 상태를 설정합니다.</td>
+                        <td>&lt;a&gt;</td>
+                        <td>&lt;a&gt; 태그는 다른 페이지 이동을 설정합니다.</td>
                     </tr>
                    
                 </tbody>
