--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
                     <!-- box -->
                     <section class="color-shape script">
-                        <a href="refer-jquery/index2.html" target="_blank">
+                        <a href="refer-jquery/index.html" target="_blank">
                             <div class="image-wrap">
                                 <div class="hover-wrap">
                                     <span class="overlay-img-donut">JQUERY</span>
@@ -323,6 +323,49 @@
                         </a>
                     </section>
                     <!-- //box -->
+
+                     <!-- box -->
+                     <section class="color-shape reference">
+                        <a href="refer-mysql/index.html"_blank">
+                            <div class="image-wrap">
+                                <div class="hover-wrap">
+                                    <span class="overlay-img-donut">MYSQL</span>
+                                    <span class="overlay-text-thumb-donut">데이터베이스</span>
+                                    <span class="overlay-text-thumb1-donut">데이터베이스</span>
+                                    <span class="overlay-text-thumb2-donut">MYSQL</span>
+                                </div>
+                                <img src="assets/img/svg-pear.svg" alt="portfolio">
+                                <div class="img-text donutImg">
+                                    <h5>MYSQL</h5>
+                                    <p>데이터베이스</p>
+                                    <span>MYSQL</span>
+                                </div>
+                            </div>
+                        </a>
+                    </section>
+                    <!-- //box -->
+
+                     <!-- box -->
+                     <section class="color-shape reference">
+                        <a href="refer-effct/index.html"_blank">
+                            <div class="image-wrap">
+                                <div class="hover-wrap">
+                                    <span class="overlay-img-donut">EFFECT</span>
+                                    <span class="overlay-text-thumb-donut">이펙트</span>
+                                    <span class="overlay-text-thumb1-donut">이펙트</span>
+                                    <span class="overlay-text-thumb2-donut">EFFECT</span>
+                                </div>
+                                <img src="assets/img/svg-cookie.svg" alt="portfolio">
+                                <div class="img-text donutImg">
+                                    <h5>EFFECT</h5>
+                                    <p>이펙트</p>
+                                    <span>EFFECT</span>
+                                </div>
+                            </div>
+                        </a>
+                    </section>
+                    <!-- //box -->
+
 
                 </div>
                 <!-- //container-->
