--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="JIHYE">
-    <meta name="description" content="웹 퍼블리셔를 위한 정보 공유 사이트입니다.">
-    <meta name="keywords" content="지혜, 웹 퍼블리셔, 웹 표준, 웹 접근성, 화려한 디자인, publisher, css3, html, markup, design">
-    <title>지혜 | JIHYE </title>
+    <meta name="description" content="웹 퍼블리셔 및 브랜드 이미지를 위한 정보 공유 사이트입니다.">
+    <meta name="keywords" content="민서, 웹 퍼블리셔, 웹 표준, 웹 접근성, 화려한 디자인, publisher, css3, html, markup, design, brand image consultant">
+    <title>민서 | MINSEO </title>
 
     <!-- css -->
     <link href="assets/css/bootstrapTheme.css" rel="stylesheet">
@@ -28,18 +28,11 @@
 
     <!-- Facebook meta tags -->
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="지혜" />
+    <meta property="og:title" content="민서" />
     <meta property="og:url" content="http://richclub8.dothome.co.kr/responsive/html5/index.html" />
     <meta property="og:image" content="http://richclub8.dothome.co.kr/assets/ico/icon.png" />
-    <meta property="og:site_name" content="지혜" />
-    <meta property="og:description" content="웹과 관련된 정보를 제공합니다." />
-
-    <!-- twitter meta tags -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@webstoryboy" />
-    <meta name="twitter:title" content="웹스토리보이" />
-    <meta name="twitter:description" content="웹과 관련된 정보를 제공합니다." />
-    <meta property="twitter:image" content="http://richclub8.dothome.co.kr/assets/ico/icon.png" />
+    <meta property="og:site_name" content="민서" />
+    <meta property="og:description" content="웹과 브랜드 이미지 관련된 정보를 제공합니다." />
 
     <!-- 웹 폰트 -->
     <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
@@ -112,7 +105,6 @@
                 <div class="nav-collapse collapse pull-right">
                     <ul class="nav">
                         <li><a href="https://wisdominyellow.tistory.com/">Tistory</a></li>
-                        <li><a href="https://codepen.io/webstoryboy">Codepen</a></li>
                     </ul>
                 </div>
             </div> 
@@ -131,12 +123,8 @@
                     </div>
                     <div class="header_icon">
                         <ul>
-                            <li><a href="https://twitter.com/webstoryboy" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i><span>twitter</span></a></li>
-                            <li><a href="https://codepen.io/webstoryboy/" target="_blank"><i class="fa fa-codepen" aria-hidden="true"></i><span>codepen</span></a></li>
-                            <li><a href="https://github.com/webstoryboy" target="_blank"><i class="fa fa-github" aria-hidden="true"></i><span>github</span></a></li>
-                            <li><a href="https://www.youtube.com/channel/UCsvQSv7EeCMHyYb9ENKAJZw" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true"></i><span>youtube</span></a></li>
-                            <li><a href="https://dribbble.com/webstoryboy" target="_blank"><i class="fa fa-dribbble" aria-hidden="true"></i><span>dribbble</span></a></li>
-                            <li><a href="https://www.instagram.com/webstoryboy/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i><span>instagram</span></a></li>
+                            <li><a href="https://github.com/jihyeh53" target="_blank"><i class="fa fa-github" aria-hidden="true"></i><span>github</span></a></li>
+                            <li><a href="https://www.instagram.com/minseooooooooooooo53/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i><span>instagram</span></a></li>
                         </ul>
                     </div>
                 </div>
@@ -149,7 +137,7 @@
     <!-- contents_tit -->
     <div id="contents_tit">
         <div class="titt">
-            <p><a href="#" class="tit_btn">&quot;나는 황지혜이다&quot;</a></p>
+            <p><a href="#" class="tit_btn">&quot;나는 황민서이다&quot;</a></p>
         </div>
     </div>
     <!-- //contents_tit -->
