--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="JIHYE">
+    <meta name="author" content="MINSEO">
     <meta name="description" content="웹 퍼블리셔 및 브랜드 이미지를 위한 정보 공유 사이트입니다.">
     <meta name="keywords" content="민서, 웹 퍼블리셔, 웹 표준, 웹 접근성, 화려한 디자인, publisher, css3, html, markup, design, brand image consultant">
     <title>민서 | MINSEO </title>
@@ -101,7 +101,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="brand" href="https://jihyeh53.github.io/dothome21/">JIHYE</a>
+                <a class="brand" href="https://jihyeh53.github.io/dothome21/">MINSEO</a>
                 <div class="nav-collapse collapse pull-right">
                     <ul class="nav">
                         <li><a href="https://wisdominyellow.tistory.com/">Tistory</a></li>
@@ -371,7 +371,7 @@
             <div class="row">
                 <div class="span12">
                     <h5>
-                        <a href="https://jihyeh53.github.io/dothome21/" target="_blank">JIHYE</a>
+                        <a href="https://jihyeh53.github.io/dothome21/" target="_blank">MINSEO</a>
                         <span id="clock"></span>
                         <span id="infor"></span>
                     </h5>
