--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <div class="bs-header bgs1" id="content">
         <div class="container">
-            <h1>Class v1.0 &lt;/doc&gt;</h1>
+            <h1>PORTFOLIO &lt;/doc&gt;</h1>
             <p><a href="https://jihyeh53.github.io/dothome21/" target="_blank">jihyeh53.github.io</a></p>
         </div>
     </div>
@@ -87,7 +87,7 @@
         <div class="row">
 
             <div class="col-md-12">
-                <h2>(디지털컨버전스) [B/L] JAVA기반 스마트웹 개발 전문가 양성_B</h2>
+                <h2>황민서의 포트폴리오</h2>
                 <div class="row">
                     <div class="col-xs-6 col-md-3">
                         <a href="https://youtu.be/zKeK6vtHKvg" class="thumbnail">
